[package]
name = "ili9342c-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = {version="*", default-features=false}
embedded-graphics-core = { version = "*", default-features = false}
display-interface = {version = "*", default-features = false}
